<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:background="@drawable/blue_bg">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Registration form"
            android:textSize="25sp"
            android:textColor="#FFEB3B"
            android:layout_marginBottom="10dp"/>
       </FrameLayout>

       <ImageView
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:id="@+id/imggg"
           android:layout_marginHorizontal="120dp"
           android:src="@drawable/person" />

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etFirstname"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivfirstname"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Firstname"
               android:inputType="textPersonName"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivfirstname"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/person" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

       <!-- INPUT -->
       <EditText
           android:id="@+id/etLastname"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/ivlastname"
           android:background="@android:color/transparent"
           android:fontFamily="sans-serif"
           android:hint="Lastname"
           android:inputType="textPersonName"
           android:maxLines="1"
           android:paddingLeft="17dp"
           android:paddingTop="15dp"
           android:paddingBottom="15dp"
           android:textCursorDrawable="@drawable/cursor_color"
           android:textSize="15sp" />

       <!-- ICON -->
       <ImageView
           android:id="@+id/ivlastname"
           android:layout_width="14.7dp"
           android:layout_height="10.3dp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="17dp"
           android:src="@drawable/person" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etAddress"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivaddress"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Address"
               android:inputType="text"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivaddress"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/address" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etEmailAddress"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivemail"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Email Address"
               android:inputType="textEmailAddress"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivemail"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/email" />

       </RelativeLayout>


       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etPhoneNumber"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivPhone"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Phone"
               android:inputType="number"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivPhone"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/phone" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etUsername"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivUsername"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Username"
               android:inputType="text"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivUsername"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/username" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivPassword"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Password"
               android:inputType="textPassword"
               android:maxLength="10"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivPassword"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/password" />

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="12.7dp"
           android:layout_marginRight="62dp"
           android:background="@drawable/blue_border_rounded_cornwe">

           <!-- INPUT -->
           <EditText
               android:id="@+id/etConfirmPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_toRightOf="@+id/ivConfirmPassword"
               android:background="@android:color/transparent"
               android:fontFamily="sans-serif"
               android:hint="Confirm Password"
               android:inputType="textPassword"
               android:maxLength="10"
               android:maxLines="1"
               android:paddingLeft="17dp"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:textCursorDrawable="@drawable/cursor_color"
               android:textSize="15sp" />

           <!-- ICON -->
           <ImageView
               android:id="@+id/ivConfirmPassword"
               android:layout_width="14.7dp"
               android:layout_height="10.3dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="17dp"
               android:src="@drawable/password" />

       </RelativeLayout>

       <TextView
           android:id="@+id/tvSignUp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginLeft="62dp"
           android:layout_marginTop="28.7dp"
           android:layout_marginRight="62dp"
           android:background="@android:color/holo_red_light"
           android:fontFamily="sans-serif"
           android:gravity="center"
           android:paddingTop="14dp"
           android:paddingBottom="14dp"
           android:text="Register"
           android:textColor="#ffffff"
           android:textSize="17sp" />

   </LinearLayout>

</ScrollView>